# SimpleImageIO

./: .editorconfig  .gitignore  CMakeLists.txt  FlipBookExample.dib  FlipBookExample.fsx  MANIFEST.in  README.md  RunBench.fsx  SimpleImageIO.sln  THIRDPARTIES.txt  flipbook.ipynb  justfile  make.ps1  omnisharp.json  pyproject.toml  setup.py
.github/workflows/: build.yml  main.yml
Core/: CMakeLists.txt  error_metrics.cpp  filter.cpp  image.cpp  image.h  imageio.cpp  manipulation.cpp  tonemapping.cpp  vec3.h
Core/cmake/: FindOpenMP.cmake
Data/: ClassicBidir.exr  RedDotsTest.exr  Reference.exr  RenderMasks.exr  Vcm.exr
FlipViewer/: package-lock.json  package.json  test.html  tsconfig.json  webpack.config.js
FlipViewer/src/: FlipBook.tsx  ImageContainer.tsx  Magnifier.tsx  MethodList.tsx  Popup.tsx  Render.ts  ToneMapControls.tsx  Tools.tsx  flipviewer.ts  styles.module.css
PyTest/: Reference.exr  benchmark_io.py  benchmark_manip.py  test.py  test_errors.py  test_io.py  test_manip.py  test_tonemap.py  test_zoom.py
PyWrapper/simpleimageio/: __init__.py  corelib.py  error_metrics.py  flip.py  image.py  imageOps.js  imageViewer.js  manip.py  style.css  testFlip.html  tev.py  tonemap.py
SimpleImageIO/: BoxFilter.cs  Denoiser.cs  DilationFilter.cs  ErosionFilter.cs  FalseColor.cs  Filter.cs  FlipBook.cs  GaussFilter.cs  Histogram.cs  HtmlUtil.cs  IColorMap.cs  Image.cs  ImageBase.cs  ImageDataSet.cs  Imports.cs  Layers.cs  LazyImage.cs  LinearColormap.cs  MedianFilter.cs  Metrics.cs  MonochromeImage.cs  OpenImageDenoise.cs  RGBE.cs  RenderHistogram.cs  RgbColor.cs  RgbImage.cs  SimpleImageIO.csproj  SimpleImageIOCore.cs  TevIpc.cs  Tonemap.cs  extension.dib
SimpleImageIO.Benchmark/: ColorBench.cs  FiltersBench.cs  IOBench.cs  ImageOpsBench.cs  Program.cs  SimpleImageIO.Benchmark.csproj
SimpleImageIO.Integration/: Program.cs  SimpleImageIO.Integration.csproj  TestDenoise.cs  TestFalseColor.cs  TestFlip.cs  TestLayerOrder.cs  TestTonemap.cs  ValidateTevIpc.cs
SimpleImageIO.Tests/: Channels.cs  Color.cs  DenoiserLinking.cs  ErrorMetrics.cs  Filter.cs  Flip.cs  HistogramTest.cs  ImageManipulation.cs  Monochrome.cs  PngString.cs  RedDotsFailure.cs  SimpleImageIO.Tests.csproj  SinglePixel.cs  SmallImage.cs  Unicode.cs
SimpleImageIO.Tests/Properties/: launchSettings.json
